# crud-ex-backend-servant

./: .gitattributes  .gitignore  LICENSE  README.md  crud-ex-backend-servant.cabal
api-to-elm/: README.md  api-to-elm.cabal  src-api  stack.yaml
api-to-elm/app/: Main.hs
api-to-elm/output/FromServant/: ThingApi.elm
api-to-purs/: api-to-purs.cabal
api-to-purs/app/: Main.hs
app/: Main.hs
java/: Utils.java
src-api/CrudEx/: Api.hs
src-api/CrudEx/Api/: Common.hs  ElmConfig.hs  Thing.hs  User.hs
src-api/CrudEx/Api/ElmConfig/: Logger.hs
src-server/CrudEx/: Config.hs  Handlers.hs  Server.hs
src-server/CrudEx/Handlers/: ElmConfig.hs  Thing.hs  User.hs
src-server/Util/: StaticFiles.hs  WaiStatic.hs
src-server/Util/WaiStatic/: Types.hs
static/js/: elm-app.js
